--- a/Ecommerce.css
+++ b/Ecommerce.css
@@ -194,3 +194,416 @@ section{
 span{
     color: #e60000; /* Color de texto */
 }
+/* category */
+.category h3{
+    text-align: center;
+    font-size:2.5rem;
+    margin: 1.5rem;
+    color: #e60000;
+}
+
+.category .box-container,.pramotion .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(16rem,1fr));
+    gap:2rem;
+}
+.category .box-container .box{
+    text-align: center;
+}
+.category .box-container .box h3{
+    font-size:1.7rem;
+    color: #222;
+    font-weight: bolder;
+}
+
+
+.category .box-container .box:hover h3{
+    color: #e60000;
+}
+.category .box-container .box img{
+    height:20rem;
+    margin-bottom: 1rem;
+}
+.category .box-container .box img:hover{
+    transform: scale(1.2);
+}
+
+/* Pramotion */
+.collection-card{
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: center;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    align-items: center;
+    padding-block: 45px 25px;
+}
+
+/*shop*/
+
+.shop{
+    color: #eee;
+}
+
+.shop .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(25rem,1fr));
+    gap:2rem;
+}
+
+.shop .box-container .box{
+    text-align: center;
+    border: 0.2rem solid rgba(231,153,153);
+    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.1);
+}
+
+.shop .box-container .box:hover .img img{
+    transform: scale(1.1);
+}
+
+.shop .box-container .box:hover .img .icons{
+    transform: translateX(0rem);
+}
+
+.shop .box-container .box .img{
+    position: relative;
+    overflow: hidden;
+}
+
+.shop .box-container .box .img img{
+    height: 20rem;
+}
+
+.shop .box-container .box .img .icons{
+    position: absolute;
+    top: 1rem;
+    left: 2rem;
+    transform: translateX(-10rem);
+}
+
+.shop .box-container .box .img .icons a{
+    display: block;
+    height: 4rem;
+    width: 4rem;
+    line-height: 3.8rem;
+    font-size: 1.7rem;
+    color: #e60000;
+    background: #fff;
+    border-radius: 0.2rem solid #222;
+    margin-top: 1rem;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
+
+.shop .box-container .box .img .icons a:hover{
+    color: #fff;
+    background: #222;
+}
+
+.shop .box-container .box .content{
+    padding: 2rem;
+}
+
+.shop .box-container .box .content h3{
+    font-size: 2rem;
+    color: #222;
+    padding-bottom: 0.5rem;
+    font-weight: normal;
+}
+
+.shop .box-container .box .content .price{
+    font-size: 2rem;
+    font-weight: bolder;
+    color: #e60000;
+}
+
+.shop .box-container .box .content .price span{
+    color: gray;
+    font-size: 1.6rem;
+    text-decoration: line-through;
+}
+
+.shop .box-container .box .content .btn{
+    background: transparent;
+    color: black;
+}
+
+.shop .box-container .box .content .btn:hover{
+    background: #e60000;
+}
+
+
+/**Services **/
+
+.service-list{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 50px;
+    padding-inline: 30px;
+}
+
+.services-item{
+    width:250px;
+}
+
+.service-card{
+    display:flex;
+    align-items:center;
+    gap: 15px;
+}
+
+.service-card .card-icon{
+    background: #e60000;
+    min-width: 55px;
+    height: 55px;
+    border-radius:50%;
+    display: grid;
+    place-items: center;
+}
+
+.service-card .card-icon img{
+    filter: brightness(0) invert(1);
+    width: 70%;
+    height:auto;
+}
+
+.service-card .card-title{
+    font-size: var(--fs-6);
+    margin-bottom: 8px;
+}
+
+.service-card .card-text{
+    color: var(--onyx);
+    font-family: var(--ff-roboto);
+    font-size: var(--fs-7);
+}
+
+.service-card .card-text span{
+    display: inline-block;
+    color: var(--bittersweet);
+}
+
+
+/** Post Card **/
+
+.section{
+    padding-block: var(--section-padding);
+    margin: 20px;
+}
+
+.insta-post-list{
+    gap: 0;
+}
+
+.insta-post-list .insta-post-item {
+    position: relative;
+    min-width: 23.33%;
+    aspect-ratio: 1/1;
+}
+
+.insta-post-list .insta-post-item img {
+    width: 100%;
+    height: 100%;
+}
+
+.insta-post-link {
+    position: absolute;
+    inset: 0;
+    display: grid;
+    place-items: center;
+    background: var(--oxford-blue_60);
+    opacity: 0;
+    transition: var(--transition-1);
+}
+
+.insta-post-link ion-icon {
+    color: var(--white);
+    font-size: 40px;
+}
+
+.insta-post-link:is(:hover,:focus){
+    opacity: 1;
+}
+
+
+/** Scrollbar **/
+
+.has-scrollbar {
+    display: flex;
+    gap: 0px;
+    overflow-x: auto;
+    padding-bottom: 20px;
+    scroll-snap-type: inline mandatory;
+}
+ 
+.has-scrollbar>li{
+    min-width: 100%;
+    scroll-snap-align: start;
+}
+
+.has-scrollbar::-webkit-scrollbar{
+    height:10px;
+}
+
+.has-scrollbar::-webkit-scrollbar-track{
+    background:var(--white);
+    border-radius: 20px;
+    outline: 2px solid var(--bittersweet);
+}
+
+.has-scrollbar::-webkit-scrollbar-thumb{
+    background:var(--bittersweet);
+    border: 2px solid var(--white);
+    border-radius: 20px;
+}
+
+.has-scrollbar::-webkit-scrollbar-button{
+    width: calc(25%-40px) !important;
+}
+
+
+/** footer **/
+.footer .logo{
+    text-align: center;
+    border-bottom: 0.2rem solid #222;
+    margin-bottom: 2rem;
+}
+
+.footer .box-container .box .btn{
+    background:transparent;
+    color: #222;
+}
+
+.footer .box-container .box .btn:hover{
+    background:#e60000;
+    color: #fff;
+}
+
+.footer{
+    background:#fff;
+}
+
+.footer .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(25rem,1fr));
+    gap: 2rem;
+}
+
+.footer .box-container .box h3{
+    font-size: 2.2rem;
+    color: #222;
+    padding: 1rem 0;
+}
+
+.footer .box-container .box .link{
+    padding: 1rem 0;
+    font-size: 1.4rem;
+    color: #404040;
+    display: block;
+}
+
+.footer .box-container .box .link i{
+    padding-right: .5rem;
+    color: #e60000;
+}
+
+.footer .box-container .box .link:hover{
+    color: #e60000;
+}
+.footer .box-container .box .link:hover i{
+    padding-right: 2rem;
+}
+.footer .box-container .box .share{
+    margin-top: 2rem;
+}
+.footer .box-container .box .share a{
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    font-size: 1.7rem;
+    border-radius: .5rem;
+    background: #eee;
+    text-align: center;
+    color: #222;
+    margin-right: .5rem;
+}
+
+.footer .box-container .box .share a:hover{
+    color: #fff;
+}
+
+.footer .box-container .box p{
+    padding: 1rem 0;
+    font-size: 1.7rem;
+    color: #666;
+}
+
+.footer .box-container .box form .email{
+    border: 0.2rem solid #222;
+    width: 100%;
+    padding: 1.2rem 1.4rem;
+    text-decoration: none;
+    color: #666;
+    margin: 1rem 0;
+    font-size:1.6rem;
+}
+
+.footer .credit{
+    text-align: center;
+    padding: 1rem;
+    padding-top: 3rem;
+    margin-top: 3rem;
+    font-size: 2rem;
+    border-top: 0.2rem solid #222;
+    color: #666;
+}
+
+
+
+
+/* media queries */
+@media(max-width:991px) {
+    html{
+        font-size: 55%;
+    }
+    .header{
+        padding:1.5rem 2rem;
+    }
+    section{
+    padding: 3rem 2rem;
+}
+}
+
+@media(max-width:768px) {
+    .header #menu-btn {
+        display: inline-block;
+    }
+    .header .navbar{
+        position: absolute;
+        top: 99%;
+        left: 0;
+        right: 0;
+        background: #fff;
+        border-top:0.2rem solid #222;
+        border-bottom: 0.2rem solid #222;
+        padding: 0.2rem;
+        clip-path: polygon(0 0,100% 0, 100% 0, 0 0);
+    }
+    .header .navbar.active{
+        clip-path: polygon(0 0,100% 0, 100% 100%,0 100%);
+    } 
+
+    .header .navbar a{
+        display: block;
+        font-size:2rem;
+        margin: 3rem 1rem;
+    }
+}
+
+@media(max-width:450px) {
+    html{
+        font-size:50%;
+    }   
+}
